# serializer version: 1
# name: TestJobApplicationNotifications.test_refuse_with_prescriber[False-False][job_seeker_email]
  '''
  Votre candidature chez ACME Inc. n'a malheureusement pas pu aboutir.
  
  Nous vous souhaitons bon courage dans votre recherche et sommes persuadés que votre démarche aboutira ailleurs.
  
  *Message de l'entreprise* :
  
  Pas venu
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse_with_prescriber[False-False][prescriber_email]
  '''
  La candidature de J… D… envoyée par Pierre DUPONT chez ACME Inc. n'a malheureusement pas pu aboutir.
  
  *Motif de refus non transmis au candidat* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Réponse de l'entreprise transmise au candidat* :
  
  Pas venu
  
  -----
  
  Suivez toutes les candidatures de J… D… en un seul endroit : http://localhost:8000/job-seekers/job_applications/7614fc4b-aef9-4694-ab17-12324300180a
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse_with_prescriber[False-True][job_seeker_email]
  '''
  Votre candidature chez ACME Inc. n'a malheureusement pas pu aboutir.
  
  Nous vous souhaitons bon courage dans votre recherche et sommes persuadés que votre démarche aboutira ailleurs.
  
  *Message de l'entreprise* :
  
  Pas venu
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse_with_prescriber[False-True][prescriber_email]
  '''
  La candidature de Jane DOE envoyée par Pierre DUPONT chez ACME Inc. n'a malheureusement pas pu aboutir.
  
  *Motif de refus non transmis au candidat* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Réponse de l'entreprise transmise au candidat* :
  
  Pas venu
  
  *Message privé de l'entreprise (non transmis au candidat)* :
  
  Le candidat n'est pas venu.
  
  -----
  
  Suivez toutes les candidatures de Jane DOE en un seul endroit : http://localhost:8000/job-seekers/job_applications/7614fc4b-aef9-4694-ab17-12324300180a
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse_with_prescriber[True-False][job_seeker_email]
  '''
  Votre candidature chez ACME Inc. n'a malheureusement pas pu aboutir.
  
  Nous vous souhaitons bon courage dans votre recherche et sommes persuadés que votre démarche aboutira ailleurs.
  
  *Motif de refus* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Message de l'entreprise* :
  
  Pas venu
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse_with_prescriber[True-False][prescriber_email]
  '''
  La candidature de J… D… envoyée par Pierre DUPONT chez ACME Inc. n'a malheureusement pas pu aboutir.
  
  *Motif de refus transmis au candidat* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Réponse de l'entreprise transmise au candidat* :
  
  Pas venu
  
  -----
  
  Suivez toutes les candidatures de J… D… en un seul endroit : http://localhost:8000/job-seekers/job_applications/7614fc4b-aef9-4694-ab17-12324300180a
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse_with_prescriber[True-True][job_seeker_email]
  '''
  Votre candidature chez ACME Inc. n'a malheureusement pas pu aboutir.
  
  Nous vous souhaitons bon courage dans votre recherche et sommes persuadés que votre démarche aboutira ailleurs.
  
  *Motif de refus* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Message de l'entreprise* :
  
  Pas venu
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
# name: TestJobApplicationNotifications.test_refuse_with_prescriber[True-True][prescriber_email]
  '''
  La candidature de Jane DOE envoyée par Pierre DUPONT chez ACME Inc. n'a malheureusement pas pu aboutir.
  
  *Motif de refus transmis au candidat* :
  
  Candidat ne s’étant pas présenté à l’entretien
  
  *Réponse de l'entreprise transmise au candidat* :
  
  Pas venu
  
  *Message privé de l'entreprise (non transmis au candidat)* :
  
  Le candidat n'est pas venu.
  
  -----
  
  Suivez toutes les candidatures de Jane DOE en un seul endroit : http://localhost:8000/job-seekers/job_applications/7614fc4b-aef9-4694-ab17-12324300180a
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
